--- a/pom.xml
+++ b/pom.xml
@@ -1,10 +1,9 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.revature</groupId>
-  <artifactId>Project0</artifactId>
+  <artifactId>PlanetAPI</artifactId>
   <version>0.0.1-SNAPSHOT</version>
-
-
+  
   <properties>
           <maven.compiler.source>1.8</maven.compiler.source>
           <maven.compiler.target>1.8</maven.compiler.target>
@@ -17,7 +16,7 @@
             <artifactId>junit-jupiter-api</artifactId>
             <version>5.8.2</version>
             <scope>test</scope>
-       </dependency>
+        </dependency>
             
               <!-- https://mvnrepository.com/artifact/org.mockito/mockito-core -->
         <dependency>
@@ -34,7 +33,18 @@
             <version>4.2.0</version>
             <scope>test</scope>
         </dependency>
-      
+        
+        <dependency>
+			<groupId>org.postgresql</groupId>
+			<artifactId>postgresql</artifactId>
+			<version>42.3.1</version>
+		</dependency>
+		
+		<dependency>
+			<groupId>ch.qos.logback</groupId>
+			<artifactId>logback-classic</artifactId>
+			<version>1.2.9</version>
+		</dependency>
             
   </dependencies>
 
@@ -52,4 +62,4 @@
         </plugins>
   </build>
   
- </project>
+</project>
